policies/iptables-execution.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: iptables-execution
spec:
  categories:
  - Network Tools
  criteriaLocked: true
  description: Detects execution of iptables; iptables is a deprecated way of managing
    network state in containers
  enforcementActions: []
  eventSource: DEPLOYMENT_EVENT
  exclusions:
  - name: Don't alert on haproxy-* deployment in openshift-vsphere-infra namespace
    deployment:
      name: haproxy-.*
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on keepalived-* deployment in openshift-vsphere-infra namespace
    deployment:
      name: keepalived-.*
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on ovnkube-node deployment in openshift-ovn-kubernetes Namespace
    deployment:
      name: ovnkube-node
      scope:
        cluster: ''
        namespace: openshift-ovn-kubernetes
        label: null
    image: null
    expiration: null
  - name: Don't alert on kube-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: kube-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on istio-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: istio-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-sdn namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-sdn
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - RUNTIME
  mitreAttackVectors:
  - tactic: TA0005
    techniques:
    - T1562.004
  mitreVectorsLocked: true
  policyName: GitOps - iptables Execution
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Process Name
      booleanOperator: OR
      negate: false
      values:
      - value: iptables
  rationale: iptables is a deprecated way of managing network state in containers
  remediation: Check for any processes that may be modifying iptables rules. Check
    for open ports that may be allowing code injection to modify iptables rules
  scope: []
  severity: HIGH_SEVERITY
  disabled: false
